corpus/pointers.txt
=== pointer_lvalues_and_unsafe ===
let store(p: *i32): unit = { *p := 42; };
let addr(x: i32): *i32 = &x;
let mutate_point(p: *point): unit = {
  (*p).x := 3;
};
let null_ok(p: *i32): bool = ptr_equal[i32](p, null);
---
(source_file
  (let_decl name: (identifier) (parameters (param (identifier) ":" (type (pointer_type (type (identifier)))))) ":" (type (identifier)) value: (block (assign_stmt (unary_expression (identifier)) (integer))))
  (let_decl name: (identifier) (parameters (param (identifier) ":" (type (identifier)))) ":" (type (pointer_type (type (identifier)))) value: (unary_expression (identifier)))
  (let_decl name: (identifier) (parameters (param (identifier) ":" (type (pointer_type (type (identifier)))))) ":" (type (identifier)) value: (block (assign_stmt (field_expression (parenthesized_expression (unary_expression (identifier))) (identifier)) (integer))))
  (let_decl name: (identifier) (parameters (param (identifier) ":" (type (pointer_type (type (identifier)))))) ":" (type (identifier)) value: (call_expression function: (identifier (type_arguments (type (identifier)))) (identifier) (null)))
)
